--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>SignUp</title>
     <link rel="stylesheet" href="">
   </head>
   <body>
+
+    {% for message in messages %}
+    
+    <div class="alert alert-{{message.tags}} alert.dismissible fade show" role="alert">
+    <strong>Message: </strong> {{message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    {% endfor %}
+
     <h1>Sign Up</h1>
 
     <form action="/signup" method="post">
