--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
+    {% include 'navbar.html'%}
     {% for message in messages %}
     
     <div class="alert alert-{{message.tags}} alert.dismissible fade show" role="alert">
@@ -29,6 +30,6 @@
     <button type="submit"><a href="/signup">SignUp</a></button>
     <button type="submit"><a href="/signin">SignIn</a></button>
     {% endif %}
-    
+    {% include 'footer.html' %}
   </body>
 </html>
